<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical"
    tools:context=".ui.filme_detalhe.FilmeDetalheActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="40dp"
                    android:src="@drawable/ic_baseline_image_24"
                    android:alpha="0.5"
                    android:layout_centerInParent="true"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/banners"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/bannersIndicators"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:background="@android:color/transparent"
                    app:tabBackground="@drawable/tab_pager_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />

                <ProgressBar
                    android:id="@+id/filme_banner_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/MToolbarTheme"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:behavior_overlapTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@color/white">

                <RelativeLayout
                    android:id="@+id/filme_poster_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp">

                    <ImageView
                        android:id="@+id/filme_poster"
                        android:layout_width="80dp"
                        android:layout_height="120dp"
                        android:background="@color/black_transp"
                        android:src="@drawable/ic_baseline_image_24" />

                    <ProgressBar
                        android:id="@+id/filme_poster_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/filme_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_toEndOf="@+id/filme_poster_container"
                    tools:text="Titulo" />

                <TextView
                    android:id="@+id/filme_original_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:layout_toEndOf="@+id/filme_poster_container"
                    android:layout_below="@+id/filme_titulo"
                    android:layout_marginBottom="10dp"
                    tools:text="Titulo Original" />

                <TextView
                    android:id="@+id/filme_avaliacao_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/filme_poster_container"
                    android:layout_below="@+id/filme_original_titulo"
                    android:layout_marginEnd="5dp"
                    android:text="@string/avaliacao"
                    android:textStyle="bold"/>

                <RatingBar
                    android:id="@+id/filme_avaliacao_ratingbar"
                    style="?attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:stepSize="0.5"
                    android:layout_alignBottom="@+id/filme_avaliacao_label"
                    android:layout_toEndOf="@+id/filme_avaliacao_label" />

                <TextView
                    android:id="@+id/filme_avaliacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/filme_avaliacao_ratingbar"
                    android:layout_below="@+id/filme_original_titulo"
                    tools:text="4.0" />

                <TextView
                    android:id="@+id/filme_lancamento_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/filme_poster_container"
                    android:layout_below="@+id/filme_avaliacao"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold"
                    android:text="@string/data_lancamento" />

                <TextView
                    android:id="@+id/filme_lancamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filme_avaliacao"
                    android:layout_toEndOf="@+id/filme_lancamento_label"
                    tools:text="04-03-2020" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filme_generos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/filme_lancamento_label"
                    android:layout_toEndOf="@+id/filme_poster_container"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginVertical="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/sinopse"/>

                <TextView
                    android:id="@+id/filme_sinopse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    tools:text="@string/lorem_ipsum"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filme_estudios_vazio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indefinido"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/filme_estudios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <include android:id="@+id/filme_similares"
                    layout="@layout/item_list_filmes" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>